@@ -4,8 +4,10 @@ Menu structure has changed: to avoid nesting problems and issues with bread-crum
 Track fields split in fields and appointments: check any code using any track field tables directly, track field id's are no longer integers and getFieldsElements() is no longer in use
 GemsEscort->tokenMailFields() no longer exists
 The token overviews can also be filtered on missing or incorrect email addresses
+The token mail communication is reset if a new valid until date is later than the last sent email date
 Logging the respondent in respondent controller restored. Action respondent.show logs without, but respondentShow will log respondent id
 A required valid until definition for each track round can be set at the project level - for new projects this defaults to on
+Fixed several bugs, including one that added an extra day to some valid until dates.
 
 Important changes from 1.6.2 => 1.6.3
 ============================================================
